# MRAM-Thesis

./: .gitignore  GNEB1.py  README.md  data.py  main.py  vector.py
C++_core/: CMakeLists.txt  GNEB  Makefile  image.h  main.cpp  myVector.cpp  myVector.h  planeFunction.h  planeFunction.tpp  vector.cpp  vector.h
Core/: Chain.cpp  Chain.h  ChainSaver.cpp  ChainSaver.h  Makefile  MinimumFinder.cpp  MinimumFinder.h  MovingImage.cpp  MovingImage.h  Plane.cpp  Plane.h  Point.cpp  Point.h  StationaryImage.cpp  StationaryImage.h  main.cpp  python
Core/Parsers/: PlainDataParser.cpp  PlainDataParser.h
Core/configs/: mainConfig.ini
Core/sources/: AbstractChainRecalculator.cpp  AbstractChainRecalculator.h  AbstractPlane.cpp  AbstractPlane.h  Chain.cpp  Chain.h  ContinuousPlane.cpp  ContinuousPlane.h  DiscretePlane.cpp  DiscretePlane.h  FixedDistanceChainRecalculator.cpp  FixedDistanceChainRecalculator.h  Image.h  MapSender.cpp  MapSender.h  MovingImage.cpp  MovingImage.h  Pipe.cpp  Pipe.h  PlaneStrategy.cpp  PlaneStrategy.h  Point.cpp  Point.h  SimulationBuilder.cpp  SimulationBuilder.h  SimulationRunner.cpp  SimulationRunner.h  commonDefines.h
Core/sources/Parsers/: ConfigParser.cpp  ConfigParser.h  DataParserInterface.cpp  DataParserInterface.h  ParserInterface.cpp  ParserInterface.h  PlainDataParser.h
Core/tests/: Makefile  data.conf  exampleFunction.h  main.cpp  test2.cpp  testChain.cpp  testFixedDistance.cpp
PythonVisualisation/: dataGenerator.py  main.py  plotFifo.py
core/: Makefile  planeFunction.h  vector.cpp  vector.h  vectorStrategy.h
